@@ -97,6 +97,7 @@ DFHack 0.40.24-r0
     New Tweaks
     Misc Improvements
         added support for searching more lists
+        manipulator: current job as a view mode (in addition to profession and squad)
 
 DFHack 0.40.23-r1
     Internals
